@@ -3,12 +3,14 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'net.researchgate.release' version '2.6.0'
     id "com.gorylenko.gradle-git-properties" version "2.0.0"
+    id 'com.google.cloud.tools.jib' version '2.2.0'
     id 'java'
 }
 
 apply plugin: 'io.spring.dependency-management'
 apply plugin: "com.gorylenko.gradle-git-properties"
 
+apply from: "gradle/env.gradle"
 
 group = 'ru.nyrk'
 sourceCompatibility = '13'
@@ -32,8 +34,8 @@ springBoot {
 }
 
 ext {
-    set('springBootAdminVersion', "2.2.1")
-    set('springCloudVersion', "Hoxton.SR3")
+    set('springBootAdminVersion', "2.2.2")
+    set('springCloudVersion', "Hoxton.RELEASE")
 }
 
 dependencies {
@@ -41,6 +43,7 @@ dependencies {
     implementation 'de.codecentric:spring-boot-admin-starter-server'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-all'
     compileOnly 'org.projectlombok:lombok'
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -120,4 +123,48 @@ afterReleaseBuild.dependsOn publish
 
 test {
     useJUnitPlatform()
+}
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+apply plugin: "com.google.cloud.tools.jib"
+jib {
+    from {
+        image = "${registry.baseImage}"
+        auth {
+            username = registry.user
+            password = registry.password
+        }
+    }
+
+    to {
+        image = "${registry.image}:${registry.tag}";
+        auth {
+            username = registry.user
+            password = registry.password
+        }
+    }
+    container {
+        entrypoint = "/app/run-java.sh"
+        args = ["run"]
+        environment = [
+                'JAVA_MAIN_CLASS': 'ru.nyrk.admin.AdminApplication',
+                'JAVA_OPTIONS': ["-XX:+UnlockExperimentalVMOptions",
+                                 "-XX:+UseZGC",
+                                 "-Xmx256m",
+                                 "-Xlog:gc",
+                                 "-Djava.security.egd=file:/dev/./urandom",
+                                 "-XX:+UnlockDiagnosticVMOptions"]
+                        .join(' ')
+        ]
+        workingDirectory = "/app"
+        ports = ['9999']
+        labels = ['app': 'admin']
+        user = "1001"
+    }
+    extraDirectories {
+        paths = [ "${rootProject.projectDir}/jib" ]
+        permissions = [
+                '/app/run-java.sh': '755',
+                '/app/run-env.sh': '755',
+        ]
+    }
 }
